# fastapi_birzha_truda

./: .env  README.md  docker-compose.yaml  main.py  pyproject.toml
.data/base/13066/: 2619  2674
.data/base/13067/: 12907  2658  2673
.data/global/: 1260  1262  2671  2676  pg_control
.data/pg_stat/: global.stat
core/: config.py  security.py
data/: postmaster.pid
data/base/1/: 12907
data/base/13066/: 1259  2619  2662  2673  2674  2675
data/base/13067/: 2658  2704  pg_internal.init
data/base/16384/: 1247  1249  1259  1259_vm  16385  16387  16393  16394  16396  16398  16400  16408  16409  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2691  2699  2701  2702  2703  2704  (+6 more)
data/global/: 1260  1262  2396  2671  2672  2676  pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_13067.stat  db_16384.stat  global.stat
data/pg_xact/: 0000
db/: base.py  jobs.py  users.py
endpoints/: auth.py  depends.py  users.py
models/: token.py  user.py
repositories/: base.py  users.py
