[tool.poetry]
name = "bitzha_truda"
version = "0.1.0"
description = "Биржа труда на fastapi"
authors = ["Zhenis Mindoolla"]
license = "none"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
