[tool.poetry]
name = "bitzha_truda"
version = "0.1.0"
description = "Биржа труда на fastapi"
authors = ["Zhenis Mindoolla"]
license = "none"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
databases = {extras = ["postgresql"], version = "^0.5.5"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
